[build-system]
requires = ["setuptools", "wheel"]

[tool.black]
line-length = 88
target-version = ['py37']

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.mypy]
files = "src/"
ignore_missing_imports = true

[tool.pytest]
addopts = "--doctest-modules"

[project]
name = "your_project_name"
version = "0.1.0"
description = "Your project description here"
authors = ["Niraj <nirajnagle@gmail.com@example.com>"]